--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "history": "^4.6.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "net": "^1.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
