--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "animejs": "^2.0.2",
     "cuid": "^1.3.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
@@ -206,7 +207,8 @@
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "video-react": "^0.8.8"
   },
   "devEngines": {
     "node": ">=7.x",
