--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
   },
   "dependencies": {
     "animejs": "^2.0.2",
+    "api-jarvis": "^2.2.0",
     "cuid": "^1.3.8",
     "devtron": "^1.4.0",
     "electron-debug": "^1.2.0",
