--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "moment": "^2.18.1",
     "net": "^1.0.2",
     "react": "^15.6.1",
+    "react-audio-player": "^0.6.4",
     "react-dom": "^15.6.1",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.5",
