--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "electron-debug": "^1.2.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "keen-tracking": "^1.4.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "net": "^1.0.2",
