--- a/package.json
+++ b/package.json
@@ -141,7 +141,6 @@
     "cross-env": "^5.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.3",
-    "electron": "^1.6.10",
     "electron-builder": "^19.8.0",
     "electron-devtools-installer": "^2.2.0",
     "enzyme": "^2.9.1",
@@ -193,6 +192,7 @@
     "api-jarvis": "^4.0.1",
     "cuid": "^1.3.8",
     "devtron": "^1.4.0",
+    "electron": "1.6.10",
     "electron-debug": "^1.2.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
