--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
   "dependencies": {
     "animejs": "^2.0.2",
     "api-jarvis": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cuid": "^1.3.8",
     "devtron": "^1.4.0",
     "electron": "1.6.10",
