--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
   "dependencies": {
     "animejs": "^2.0.2",
     "api-jarvis": "^4.0.1",
+    "connectivity": "^1.0.1",
     "copy-webpack-plugin": "^4.5.1",
     "cuid": "^1.3.8",
     "devtron": "^1.4.0",
@@ -198,6 +199,7 @@
     "electron-debug": "^1.2.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "is-online": "^7.0.0",
     "keen-tracking": "^1.4.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
